# py-json-register

./: .gitignore  README.md  SETUP_SUMMARY.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
scripts/: track_performance.py
src/json_register/: __init__.py  _canonicalise.py  _utils.py  async_.py  exceptions.py  sync.py
tests/: __init__.py  test_canonicalise.py  test_config.py  test_error_handling.py  test_integration.py  test_performance.py  test_performance_simple.py
tests/fixtures/: json_generator.py
