[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "json-register"
version = "0.1.1"
description = "A high-performance JSON registration cache for Python with PostgreSQL backend"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "Telicent Ltd"}
]
keywords = ["json", "postgresql", "cache", "jsonb", "database"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "asyncpg>=0.29.0",
    "psycopg[pool]>=3.1.0",
    "lru-dict>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-benchmark>=4.0.0",
    "mypy>=1.5.0",
    "ruff>=0.1.5",
]

[project.urls]
Homepage = "https://github.com/telicent-oss/py-json-register"
Repository = "https://github.com/telicent-oss/py-json-register"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests that require a PostgreSQL database",
    "benchmark: marks performance benchmark tests",
]

[tool.mypy]
python_version = "3.10"
no_implicit_optional = false
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "asyncpg"
ignore_missing_imports = true

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "C4", "B", "UP"]
ignore = ["C901"]
